crates/nidus/tests/ui/injectable_unsupported_lifetime.stderr
error: #[injectable] supports no arguments, singleton, transient, or request
 --> tests/ui/injectable_unsupported_lifetime.rs:3:1
  |
3 | #[injectable(scoped)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `injectable` (in Nightly builds, run with -Z macro-backtrace for more info)
