crates/nidus/tests/ui/injectable_unsupported_lifetime.rs
use nidus::prelude::*;

#[injectable(scoped)]
struct UsersService;

fn main() {}
